@@ -6,6 +6,11 @@
     * [Setup](#setup)
         * [JAVA 21 with SDKMAN](#java-21-with-sdkman)
         * [Setup IntelliJ](#setup-intellij)
+            * [Lombok](#lombok)
+            * [Enable Save Actions](#enable-save-actions)
+            * [Enable Checkstyle Warnings](#enable-checkstyle-warnings)
+            * [Google Format](#google-format)
+                * [IntelliJ JRE Config](#intellij-jre-config)
     * [Run Locally](#run-locally)
     * [Open API Documentation](#open-api-documentation)
 
@@ -17,8 +22,6 @@
 
 This project uses Java 21, you can run in 21.0.2 or 21.0.3. If you have installed a different
 version on your machine and don't want to remove it, you can use **SDKMAN** development tool.
-It will allow you to switch based on the Java version you want to use.
-Here is the [link](https://sdkman.io).
 
 * Install SDKMAN
 
@@ -55,7 +58,8 @@ Set the default Java version for your system:
 sdk default java 21.0.2-open
 ```
 
-To verify if the java version is correct use:
+* To verify if the java version is correct use:
+
 ```shell
 java -version
 ```
@@ -64,17 +68,50 @@ java -version
 
 #### Lombok
 
-Install lombok plugin and enable Annotation Processing, as the image below: 
+Install lombok plugin and enable Annotation Processing, as the image below:
 
 ![image](docs/images/annotation-procession.png)
 
 #### Enable Save Actions
 
- ![image](docs/images/save-actions.png)
+![image](docs/images/save-actions.png)
 
 #### Enable Checkstyle Warnings
 
 Install checkstyle plugin and the configuration will be enabled
+
+#### Google Format
+
+A google-java-format IntelliJ plugin is available from the plugin repository. To install it, go to
+your IDE's settings and select the Plugins category. Click the Marketplace tab, search for the
+google-java-format plugin, and click the Install button.
+
+The plugin will be disabled by default. To enable it in the current project, go to
+File→Settings...→google-java-format Settings (or IntelliJ IDEA→Preferences...→Other
+Settings→google-java-format Settings on macOS) and check the Enable google-java-format checkbox. (A
+notification will be presented when you first open a project offering to do this for you.)
+
+To enable it by default in new projects, use File→Other Settings→Default Settings....
+
+When enabled, it will replace the normal Reformat Code and Optimize Imports actions.
+
+![image](docs/images/google-format.png)
+
+##### IntelliJ JRE Config
+
+The google-java-format plugin uses some internal classes that aren't available without extra
+configuration. To use the plugin, go to Help→Edit Custom VM Options... and paste in these lines:
+
+```
+--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+```
+
+Once you've done that, restart the IDE.
 
 ## Run Locally
 
@@ -98,59 +135,7 @@ Install checkstyle plugin and the configuration will be enabled
 
 * Access application on http://localhost:8080/api/cms/v1/team
 
-<<<<<<< HEAD
 ## Open API Documentation
 
-* Access swagger at http://localhost:8080/swagger-ui/index.html
-=======
-## JAVA 21
-
-This project uses Java 21, you can run in 21.0.2 or 21.0.3. If you have installed a different version on your machine
-and don't want to remove it, you can use **SDKMAN** development tool.
-It will allow you to switch based on the Java version you want to use.
-Here is the [link](https://sdkman.io).
-
-* Install SDKMAN
-
-Open your terminal and run the following command:
-
-```shell
-curl -s "https://get.sdkman.io" | bash
-source "$HOME/.sdkman/bin/sdkman-init.sh"
-```
-
-* Check the list of available Java versions:
-
-```shell
-sdk list java
-```
-
-* Install the desired Java version
-
-```shell
-sdk install java 21.0.2-open 
-```
-
-* Use the specific java version in the current session on your terminal
-
-```shell
-sdk use java 21.0.2-open
-```
-
-## Set the default Java version for your system:
-
-* To set the newly installed Java version as the default:
-
-```shell
-sdk default java 21.0.2-open
-```
-
-* To verify if the java version is correct use:
-
-```shell
-java -version
-```
-
-## Api documentation
-
-* [Access swagger api](http://localhost:8080/swagger-ui/index.html) and corresponding [openAPI docs here](http://localhost:8080/api-docs) 
+* [Access swagger api](http://localhost:8080/swagger-ui/index.html) and
+  corresponding [openAPI docs here](http://localhost:8080/api-docs)
